# trivia

./: .gitignore  README.md  com.github.malothebault.template  com.github.malothebault.trivia  com.github.malothebault.trivia.yml  json_data.json  meson.build  setup.py
build-aux/: post_install.py
build-aux/meson/: postinstall.py
data/: com.github.malothebault.trivia.appdata.xml  com.github.malothebault.trivia.appdata.xml.in  com.github.malothebault.trivia.desktop  com.github.malothebault.trivia.desktop.in  com.github.malothebault.trivia.gschema.xml  meson.build
po/: POTFILES  meson.build
src/: constants.py  main.py  meson.build  trivia.in  window.py
src/dialogs/: about_dialog.py  connection_dialog.py  statistics_dialog.py
src/ui/: style.css
src/views/: answers.py  custom_game.py  end_game.py  page_two.py  question.py
src/widgets/: headerbar.py  stack.py  welcome.py
